--- a/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionAlumnos.form
+++ b/UniversidadDeLaPuntaGrupo25/src/Vistas/GestionAlumnos.form
@@ -48,13 +48,11 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jDCFechaN" min="-2" pref="223" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jRBEstado" min="-2" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="jTNombre" alignment="1" min="-2" pref="111" max="-2" attributes="0"/>
-                                      <Component id="jTApellido" alignment="1" min="-2" pref="111" max="-2" attributes="0"/>
-                                      <Component id="jTDNI" alignment="1" min="-2" pref="111" max="-2" attributes="0"/>
-                                  </Group>
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="jTNombre" alignment="1" pref="143" max="32767" attributes="0"/>
+                                  <Component id="jTApellido" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="jTDNI" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="jpEstado" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                               <Component id="jBBuscar" min="-2" max="-2" attributes="0"/>
@@ -109,7 +107,7 @@
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                  <Component id="jRBEstado" min="-2" max="-2" attributes="0"/>
+                  <Component id="jpEstado" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="30" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
@@ -170,8 +168,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTNombre">
     </Component>
-    <Component class="javax.swing.JRadioButton" name="jRBEstado">
-    </Component>
     <Component class="javax.swing.JButton" name="jBBuscar">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
@@ -227,5 +223,39 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBSalirActionPerformed"/>
       </Events>
     </Component>
+    <Container class="javax.swing.JPanel" name="jpEstado">
+      <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+      </Properties>
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="jRBEstado" min="-2" pref="100" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Component id="jRBEstado" alignment="1" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+      <SubComponents>
+        <Component class="javax.swing.JRadioButton" name="jRBEstado">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="0" type="rgb"/>
+            </Property>
+            <Property name="horizontalTextPosition" type="int" value="4"/>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
   </SubComponents>
 </Form>
